# CMakePlayground

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
cmake/: Architecture.cmake  BuildProps.cmake  Feature.cmake  GetBuildProps.cmake  KernelModeDriver.cmake  Sanitizers.cmake  Toolchain.cmake
lxmonika/: CMakeLists.txt  README.md  lxmonika.rc
lxmonika/include_private/: compat.h  monika_private.h
lxmonika/src/: module.cpp  monika.cpp  monika_dispatcher.cpp  picosupport.cpp
lxstub/: CMakeLists.txt  lxstub.rc
lxstub/src/: driver.cpp
monika/: CMakeLists.txt  README.md
monika/res/: monika.rc
monika/src/: Command.cpp
mxss/: CMakeLists.txt
mxss/monix/: CMakeLists.txt
mxss/monix/src/: hello.cpp
mxss/mxhost/: mxhost.cpp
mxss/mxss/: CMakeLists.txt
packaging/nuget/: CMakeLists.txt  monika.SDK.nuspec  monika.nuspec  monika.targets
